# crypto_rs

./: Cargo.toml  README.md  build.rs  justfile
src/: command.rs  controller.rs  dialogs.rs  errors.rs  lib.rs  main.rs  myui.fl
src/assets/: wordlist.txt
src/cli/: file_menu.rs  mod.rs
src/controllers/: encryption.rs  hash.rs  mod.rs
