[package]
name = "crypto_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.10.0"
dirs = "5.0.1"
rand = "0.8.5"
hmac-sha512 = "1.1.5"
fltk = "1.4.32"
camino = "1.1.7"
fltk-theme = "0.7.2"
thiserror = "1.0.61"
fl2rust-macro = "0.5.19"


# optimize for size
[profile.release]
lto = true
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
