[package]
name = "crypto-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.10.0"
anyhow = "1.0.86"
bon = "1.2.1"
camino = "1.1.8"
dirs = "5.0.1"
hmac-sha512 = "1.1.5"
inquire = "0.7.5"
owo-colors = "4.0.0"
rand = "0.8.5"
regex = "1.10.6"


# optimize for size
[profile.release]
strip = true
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
